--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,38 @@
         android:gravity="center_horizontal"
         >
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="340dp"
+        android:gravity="center_horizontal"
+        >
+
+        <Button
+            android:id="@+id/bttCamera"
+            android:layout_width="11dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="#F4E277"
+            android:text="Kamera"
+            android:textColor="@color/black"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
         <ImageView
             android:id="@+id/ivMain"
             android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_height="290dp"
             android:layout_weight="1"
             android:layout_marginVertical="25dp"
+            android:layout_marginRight="10dp"
 
             app:srcCompat="@drawable/ic_launcher_foreground" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
