--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,12 +67,13 @@
             />
 
         <SeekBar
-                android:id="@+id/sbRotateX"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:thumbTint="#FA9C9C"
-                />
+            android:id="@+id/sbRotateX"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:max="360"
+            android:progress="180"
+            android:thumbTint="#FA9C9C" />
     </LinearLayout>
 
     <LinearLayout
@@ -99,6 +100,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:thumbTint="#FA9C9C"
+            android:max="360"
+            android:progress="180"
             />
     </LinearLayout>
 
@@ -126,6 +129,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:thumbTint="#FA9C9C"
+            android:max="360"
+            android:progress="180"
             />
     </LinearLayout>
 
@@ -188,6 +193,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:thumbTint="#FA9C9C"
+                android:max="100"
+                android:progress="0"
                 />
     </LinearLayout>
 
